# localhost

./: .gitignore  AUDIT_COMPLIANCE_REPORT.md  AUDIT_TESTING_README.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENHANCED_TESTING_FEATURES.md  LICENSE  README.md  TEST_RESULTS_SUMMARY.md  audit.md  auditanswers.md  demo_audit_tests.sh  interactive_audit_demo.sh  quick_test.sh  test_all_audit_requirements.sh
cgi-bin/: debug_cgi.py  hello.py  server_stats.py  session_test.py
config/: server.conf  test-listing.conf  test.conf
config/error_pages/: 400.html  403.html  404.html  405.html  413.html  500.html
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md
src/: lib.rs  main.rs
src/cgi/: environment.rs  executor.rs  mod.rs
src/config/: mod.rs  parser.rs  types.rs
src/error/: mod.rs  pages.rs  types.rs
src/http/: headers.rs  methods.rs  mod.rs  request.rs  response.rs  status.rs
src/routing/: directory.rs  mod.rs  router.rs  static_files.rs
src/server/: connection.rs  core.rs  epoll.rs  mod.rs  socket.rs
src/session/: cookie.rs  manager.rs  mod.rs
src/utils/: buffer.rs  mime.rs  mod.rs  timeout.rs
tests/: benchmark.sh  integration_tests.rs  run_tests.sh  stress_test.sh  unit_tests.rs
www/: cgi-test.html  index.html  upload.html
